--- a/app/views/index.html
+++ b/app/views/index.html
@@ -57,6 +57,14 @@
 
 <h2>Exploration</h2>
 
+<h3>Lab on Wednesday 5 April 2017</h3>
+<h4>Symptoms/conditions pages with link Book a GP appointment online</h4>
+<ul>
+  <li><a href="/lab_05_04_2017/diabetes">Diabetes</a></li>
+  <li><a href="/lab_05_04_2017/stomach_ache">Stomach ache</a></li>
+</ul>
+
+
 <h3>v7</h3>
 <h4>Refined, simplified journey</h4>
 
