--- a/app/views/lab_05_04_2017/diabetes.html
+++ b/app/views/lab_05_04_2017/diabetes.html
@@ -22,8 +22,7 @@ Type 2 diabetes
 
      <li class="link-list--item is-active">
 
-         Check if you have do not it
-
+         Check if you have it
      </li>
 
 
