--- a/app/views/lab_05_04_2017/stomach-ache.html
+++ b/app/views/lab_05_04_2017/stomach-ache.html
@@ -50,7 +50,7 @@ and <a href="http://www.nhs.uk/Conditions/Constipation/Pages/Treatment.aspx">con
 <li>you bleed from your bottom</li>
 <li>your diarrhoea lasts longer than a few days</li>
 </ul>
-<p style="margin-bottom: 0;"><a href=-"http://beta.nhs.uk/book-a-gp-appointment/">Book a GP appointment online</a></p>
+<p style="margin-bottom: 0;"><a href="http://beta.nhs.uk/book-a-gp-appointment/">Book a GP appointment online</a></p>
 </section>
 
 <p style="padding: 0;"></p>
